--- a/app/src/main/res/layout/activity_add_pill.xml
+++ b/app/src/main/res/layout/activity_add_pill.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.EditAlarm">
-
+    tools:context="com.example.user.lvndb.activities.AddPill">
+<include layout="@layout/toolbar_layout"/>
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
@@ -89,14 +91,14 @@
                 android:id="@+id/time2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time 1"
+                android:text="Time 2"
                 android:visibility="gone"
                 android:onClick="timeDialogue"/>
             <Button
                 android:id="@+id/time3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time 1"
+                android:text="Time 3"
                 android:visibility="gone"
                 android:onClick="timeDialogue"/>
             <Button
@@ -104,42 +106,23 @@
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time 1"
+                android:text="Time 4"
                 android:onClick="timeDialogue"/>
 
         </LinearLayout>
 
-        <Switch
-            android:id="@+id/swActive"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="On/Off" />
-
-        <Button
+       <!-- <Button
             android:id="@+id/Insert"
             android:layout_width="match_parent"
             android:layout_height="51dp"
-            android:text="Update"
+            android:text="Insert"
             android:textSize="20sp"
             android:textColor="#fff"
             android:background="@color/colorAccent"
             android:layout_margin="5dp"
             tools:layout_editor_absoluteX="85dp"
             tools:layout_editor_absoluteY="323dp" />
-
-        <Button
-            android:id="@+id/btnDeleteAlarm"
-            android:layout_width="match_parent"
-            android:layout_height="51dp"
-            android:text="Delete"
-            android:textSize="20sp"
-            android:textColor="#fff"
-            android:background="@color/colorAccent"
-            android:layout_margin="5dp"
-            tools:layout_editor_absoluteX="85dp"
-            tools:layout_editor_absoluteY="323dp" />
-
+-->
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
