--- a/app/src/main/res/layout/activity_show_hospital.xml
+++ b/app/src/main/res/layout/activity_show_hospital.xml
@@ -5,25 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.user.surokkha.activities.ShowDoctor">
+    tools:context=".activities.ShowHospital">
 
     <include layout="@layout/toolbar_layout" />
-
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_doctor"
+        android:id="@+id/rv_hospital"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-        <android.support.design.widget.NavigationView
-            android:id="@+id/navigation_viw"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@menu/nav_menu" />
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_viw"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu" />
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
