--- a/app/src/main/res/layout/activity_add_pill.xml
+++ b/app/src/main/res/layout/activity_add_pill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.AddPill">
+    tools:context="com.example.user.surokkha.activities.AddPill">
 <include layout="@layout/toolbar_layout"/>
     <LinearLayout
         android:layout_width="match_parent"
