--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.AlarmActivity">
+    tools:context="com.example.user.surokkha.activities.AlarmActivity">
 
 </android.support.constraint.ConstraintLayout>
