--- a/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/app/src/main/res/layout/activity_edit_appointment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.EditAppointment"
+    tools:context="com.example.user.surokkha.activities.EditAppointment"
     tools:layout_editor_absoluteY="25dp">
 
     <include layout="@layout/toolbar_layout"/>
