--- a/app/src/main/res/layout/activity_edit_pill.xml
+++ b/app/src/main/res/layout/activity_edit_pill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.EditPill">
+    tools:context="com.example.user.surokkha.activities.EditPill">
 
     <include layout="@layout/toolbar_layout"/>
 
@@ -115,10 +115,11 @@
 
         <Switch
             android:id="@+id/swActive"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
-            android:text="On/Off" />
+            android:text="On/Off    " />
+
 <!--
         <Button
             android:id="@+id/Insert"
