--- a/app/src/main/res/layout/activity_show_note.xml
+++ b/app/src/main/res/layout/activity_show_note.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.ShowNote">
-
+    android:orientation="vertical"
+    tools:context="com.example.user.surokkha.activities.ShowNote">
+    <include layout="@layout/toolbar_layout" />
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-</android.support.constraint.ConstraintLayout>
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_viw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/nav_menu" />
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
