--- a/app/src/main/res/layout/activity_show_pill.xml
+++ b/app/src/main/res/layout/activity_show_pill.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.lvndb.activities.ShowPill">
-
+    android:orientation="vertical"
+    tools:context="com.example.user.surokkha.activities.ShowPill">
+    <include layout="@layout/toolbar_layout" />
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +22,12 @@
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
-
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_viw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/nav_menu" />
+    </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
