all functionality with fcm push noti,phone auth with some UI

--- a/app/src/main/res/layout/appointment_card_layout.xml
+++ b/app/src/main/res/layout/appointment_card_layout.xml
@@ -9,71 +9,50 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_appointment"
         android:layout_width="fill_parent"
-        android:layout_height="130dp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp"
         >
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            <ImageView
-                android:id="@+id/ivT1"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/image" />
             <TextView
                 android:id="@+id/tvDoctorNAme_appointment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ivT1"
-                android:layout_alignTop="@id/ivT1"
+                android:gravity="center_vertical"
                 android:text="Doctor Name"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
+                android:fontFamily="sans-serif-smallcaps"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/person_20"
+                android:drawablePadding="10dp"/>
 
             <TextView
                 android:id="@+id/tvLocation_appointment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:text="Location"
-                android:layout_marginRight="10dp"
-                android:layout_below="@id/tvDoctorNAme_appointment"
-                android:layout_toRightOf="@id/ivT1"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"
+                android:drawableLeft="@drawable/marker_20"
+                android:drawablePadding="10dp"/>
             <TextView
-                android:id="@+id/tvDate_appointment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Day"
-                android:layout_marginRight="50dp"
-                android:layout_toRightOf="@id/ivT1"
-                android:layout_below="@id/ivT1"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-            <TextView
+                android:gravity="center_vertical"
                 android:id="@+id/tvTime_appointment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:layout_toRightOf="@id/tvDate_appointment"
-                android:layout_below="@id/ivT1"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:drawableLeft="@drawable/clock_20"
+                android:drawablePadding="10dp"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
