--- a/app/src/main/res/layout/doctor_card_layout.xml
+++ b/app/src/main/res/layout/doctor_card_layout.xml
@@ -9,50 +9,58 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_doctor"
         android:layout_width="fill_parent"
-        android:layout_height="130dp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp"
         >
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            <ImageView
-                android:id="@+id/ivT1"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/image" />
             <TextView
                 android:id="@+id/tvDoctorNAme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ivT1"
-                android:layout_alignTop="@id/ivT1"
                 android:text="Doctor Name"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/person_20"
+                android:drawablePadding="10dp"/>
 
 
             <TextView
-                android:id="@+id/tvDoctorLocation"
+                android:id="@+id/tvDoctorDegree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Location"
-                android:layout_marginRight="10dp"
-                android:layout_below="@id/tvDoctorNAme"
-                android:layout_toRightOf="@id/ivT1"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:text="Degree"
+                android:textSize="16sp"
+                android:drawableLeft="@drawable/degree_20"
+                android:drawablePadding="10dp"
+                />
+
+            <TextView
+                android:id="@+id/tvDoctorSpeciality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Speciality"
+                android:textSize="16sp"
+                android:drawableLeft="@drawable/speciality_20"
+                android:drawablePadding="10dp"/>
 
 
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/tvDoctorChamber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chamber"
+                android:textSize="16sp"
+                android:drawableLeft="@drawable/clinic_20"
+                android:drawablePadding="10dp"
+                />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
