--- a/app/src/main/res/layout/hospital_card_layout.xml
+++ b/app/src/main/res/layout/hospital_card_layout.xml
@@ -9,35 +9,27 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_hospital"
         android:layout_width="fill_parent"
-        android:layout_height="130dp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp"
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/ivT1"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/image" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_margin="10dp">
 
             <TextView
                 android:id="@+id/tvHospitalName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ivT1"
-                android:layout_alignTop="@id/ivT1"
                 android:text="Hospital Name"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/clinic_20"
+                android:drawablePadding="10dp"
+                android:layout_marginBottom="5dp"/>
 
 
             <TextView
@@ -47,10 +39,11 @@
                 android:text="Location"
                 android:layout_marginRight="10dp"
                 android:layout_below="@id/tvHospitalName"
-                android:layout_toRightOf="@id/ivT1"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:layout_alignParentBottom="@id/tvHospitalName"
-                android:textStyle="bold" />
+                android:drawableLeft="@drawable/marker_20"
+                android:drawablePadding="12dp"
+                />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
