--- a/app/src/main/res/layout/note_card_layout.xml
+++ b/app/src/main/res/layout/note_card_layout.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_note"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp">
 
@@ -16,15 +16,29 @@
             android:id="@+id/rlNote"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="20dp"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:gravity="start">
+
+            <LinearLayout
+                android:id="@+id/ll2"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp">
+
+                <ImageView
+                    android:id="@+id/thumbnail_image"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvNoteTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/ll2"
                 android:text="Title"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
 
@@ -33,36 +47,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvNoteTitle"
-                android:gravity="center"
-                android:maxLines="1"
+                android:layout_toRightOf="@id/ll2"
+                android:ellipsize="marquee"
+                android:singleLine="true"
                 android:text="Note"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:id="@+id/tvDate_Note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tvNoteBody"
-                android:layout_alignParentBottom="true"
-                android:layout_marginRight="50dp"
-                android:gravity="bottom"
-                android:text="Day"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginBottom="5dp"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvTime_Note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvNoteBody"
-                android:layout_toRightOf="@id/tvDate_Note"
-                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@id/ll2"
                 android:gravity="bottom"
                 android:text="Time"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
         </RelativeLayout>
 
