--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--<color name="colorPrimary">#3F51B5</color>-->
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff5252</color>
+    <color name="colorPrimaryDark">#DD2C00</color>
+    <color name="colorAccent">#ff5252</color>
 
     <color name="white">#ffffff</color>
     <drawable name="bg_screen1">#B33395ff</drawable>
